smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/defaults/default-incomplete-node.smithy
// Syntax error at line 8, column 1: Expected one of STRING('"'), BYTE_STRING('b"'), TEXT_BLOCK('"""'), BYTE_TEXT_BLOCK('b"""'), NUMBER, IDENTIFIER, LBRACE('{'), LBRACKET('['); but found EOF | Model
$version: "2.0"

namespace com.foo

structure Foo {
    bar: String = [
